--- a/index.html
+++ b/index.html
@@ -1,131 +1,123 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Roman Bouchard</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f5f5f5;
-            color: #333;
-        }
-        header {
-            background-color: #222;
-            color: #fff;
-            padding: 20px;
-            text-align: center;
-        }
-        nav {
-            display: flex;
-            justify-content: center;
-            gap: 20px;
-            background-color: #333;
-        }
-        nav a {
-            color: #fff;
-            text-decoration: none;
-            padding: 10px 15px;
-            display: inline-block;
-        }
-        nav a:hover {
-            background-color: #555;
-        }
-        section {
-            padding: 40px 20px;
-            max-width: 1000px;
-            margin: auto;
-        }
-        .projects, .documents, .gallery {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-            gap: 20px;
-        }
-        .card {
-            background-color: #fff;
-            padding: 15px;
-            border-radius: 10px;
-            box-shadow: 0 2px 6px rgba(0,0,0,0.15);
-            transition: transform 0.2s;
-        }
-        .card:hover {
-            transform: translateY(-5px);
-        }
-        footer {
-            background-color: #222;
-            color: #fff;
-            text-align: center;
-            padding: 15px;
-        }
-    </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Roman Bouchard</title>
+<style>
+    /* === Reset & Base === */
+    * {margin:0; padding:0; box-sizing:border-box;}
+    body {font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background:#f0f2f5; color:#333; scroll-behavior:smooth;}
+    a {text-decoration:none; color:inherit;}
+
+    /* === Header === */
+    header {
+        background: linear-gradient(135deg,#4a148c,#880e4f);
+        color:#fff;
+        text-align:center;
+        padding:60px 20px;
+        position: relative;
+        overflow:hidden;
+    }
+    header h1 {font-size:3rem; margin-bottom:10px; animation: slideDown 1s ease;}
+    header p {font-size:1.2rem; animation: fadeIn 2s ease;}
+
+    @keyframes slideDown {
+        0% {transform:translateY(-50px); opacity:0;}
+        100% {transform:translateY(0); opacity:1;}
+    }
+    @keyframes fadeIn {
+        0% {opacity:0;}
+        100% {opacity:1;}
+    }
+
+    /* === Navigation === */
+    nav {
+        display:flex; justify-content:center; gap:25px;
+        background:#333; padding:15px 0;
+        position:sticky; top:0; z-index:100;
+    }
+    nav a {color:#fff; padding:8px 15px; border-radius:5px; transition:0.3s;}
+    nav a:hover {background:#555;}
+
+    /* === Sections === */
+    section {padding:60px 20px; max-width:1200px; margin:auto; opacity:0; transform: translateY(30px); transition: all 0.8s ease;}
+    section.active {opacity:1; transform: translateY(0);}
+    section h2 {text-align:center; margin-bottom:40px; font-size:2rem; color:#4a148c;}
+
+    /* === Cards === */
+    .grid {display:grid; grid-template-columns:repeat(auto-fit,minmax(220px,1fr)); gap:25px;}
+    .card {
+        background:#fff; border-radius:12px; padding:20px; box-shadow:0 4px 15px rgba(0,0,0,0.1);
+        transition: transform 0.3s, box-shadow 0.3s;
+    }
+    .card:hover {transform: translateY(-8px); box-shadow:0 8px 25px rgba(0,0,0,0.2);}
+    .card img {width:100%; border-radius:10px; margin-bottom:15px;}
+
+    /* === Footer === */
+    footer {background:#222; color:#fff; text-align:center; padding:20px;}
+
+</style>
 </head>
 <body>
-    <header>
-        <h1>Roman Bouchard</h1>
-        <p>Bienvenue sur mon site perso 🐾</p>
-    </header>
-    <nav>
-        <a href="#projets">Projets</a>
-        <a href="#documents">Documents</a>
-        <a href="#gallery">Galerie</a>
-        <a href="#contact">Contact</a>
-    </nav>
 
-    <section id="projets">
-        <h2>Projets</h2>
-        <div class="projects">
-            <div class="card">
-                <h3>Projet 1</h3>
-                <p>Description rapide du projet.</p>
-            </div>
-            <div class="card">
-                <h3>Projet 2</h3>
-                <p>Description rapide du projet.</p>
-            </div>
-            <!-- Ajoute d'autres projets ici -->
-        </div>
-    </section>
+<header>
+    <h1>Roman Bouchard</h1>
+    <p>Bienvenue dans mon univers 😎</p>
+</header>
 
-    <section id="documents">
-        <h2>Documents</h2>
-        <div class="documents">
-            <div class="card">
-                <h3>Document 1</h3>
-                <p>Lien ou description du document.</p>
-            </div>
-            <div class="card">
-                <h3>Document 2</h3>
-                <p>Lien ou description du document.</p>
-            </div>
-            <!-- Ajoute d'autres documents ici -->
-        </div>
-    </section>
+<nav>
+    <a href="#projets">Projets</a>
+    <a href="#documents">Documents</a>
+    <a href="#gallery">Galerie</a>
+    <a href="#contact">Contact</a>
+</nav>
 
-    <section id="gallery">
-        <h2>Galerie</h2>
-        <div class="gallery">
-            <div class="card">
-                <img src="https://via.placeholder.com/200" alt="Image 1" style="width:100%; border-radius:10px;">
-                <p>Légende image 1</p>
-            </div>
-            <div class="card">
-                <img src="https://via.placeholder.com/200" alt="Image 2" style="width:100%; border-radius:10px;">
-                <p>Légende image 2</p>
-            </div>
-            <!-- Ajoute d'autres images ici -->
-        </div>
-    </section>
+<section id="projets">
+    <h2>Projets</h2>
+    <div class="grid">
+        <div class="card"><h3>Projet 1</h3><p>Description rapide du projet.</p></div>
+        <div class="card"><h3>Projet 2</h3><p>Description rapide du projet.</p></div>
+        <div class="card"><h3>Projet 3</h3><p>Description rapide du projet.</p></div>
+    </div>
+</section>
 
-    <section id="contact">
-        <h2>Contact</h2>
-        <p>Email : <a href="mailto:roman@example.com">roman@example.com</a></p>
-        <p>Discord : Roman#1234</p>
-    </section>
+<section id="documents">
+    <h2>Documents</h2>
+    <div class="grid">
+        <div class="card"><h3>Document 1</h3><p>Lien ou description.</p></div>
+        <div class="card"><h3>Document 2</h3><p>Lien ou description.</p></div>
+    </div>
+</section>
 
-    <footer>
-        <p>&copy; 2025 Roman Bouchard</p>
-    </footer>
+<section id="gallery">
+    <h2>Galerie</h2>
+    <div class="grid">
+        <div class="card"><img src="https://via.placeholder.com/200" alt="Image 1"><p>Légende 1</p></div>
+        <div class="card"><img src="https://via.placeholder.com/200" alt="Image 2"><p>Légende 2</p></div>
+    </div>
+</section>
+
+<section id="contact">
+    <h2>Contact</h2>
+    <p>Email : <a href="mailto:roman@example.com">roman@example.com</a></p>
+    <p>Discord : Roman#1234</p>
+</section>
+
+<footer>
+    &copy; 2025 Roman Bouchard
+</footer>
+
+<script>
+    // Animation scroll fade-in
+    const sections = document.querySelectorAll('section');
+    const observer = new IntersectionObserver((entries) => {
+        entries.forEach(entry => {
+            if(entry.isIntersecting){ entry.target.classList.add('active'); }
+        });
+    }, {threshold:0.2});
+    sections.forEach(section => observer.observe(section));
+</script>
+
 </body>
 </html>
