--- a/index.html
+++ b/index.html
@@ -3,121 +3,40 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Roman Bouchard</title>
+<title>Roman Bouchard - Accueil</title>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&display=swap" rel="stylesheet">
 <style>
-    /* === Reset & Base === */
-    * {margin:0; padding:0; box-sizing:border-box;}
-    body {font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background:#f0f2f5; color:#333; scroll-behavior:smooth;}
-    a {text-decoration:none; color:inherit;}
-
-    /* === Header === */
-    header {
-        background: linear-gradient(135deg,#4a148c,#880e4f);
-        color:#fff;
-        text-align:center;
-        padding:60px 20px;
-        position: relative;
-        overflow:hidden;
-    }
-    header h1 {font-size:3rem; margin-bottom:10px; animation: slideDown 1s ease;}
-    header p {font-size:1.2rem; animation: fadeIn 2s ease;}
-
-    @keyframes slideDown {
-        0% {transform:translateY(-50px); opacity:0;}
-        100% {transform:translateY(0); opacity:1;}
-    }
-    @keyframes fadeIn {
-        0% {opacity:0;}
-        100% {opacity:1;}
-    }
-
-    /* === Navigation === */
-    nav {
-        display:flex; justify-content:center; gap:25px;
-        background:#333; padding:15px 0;
-        position:sticky; top:0; z-index:100;
-    }
-    nav a {color:#fff; padding:8px 15px; border-radius:5px; transition:0.3s;}
-    nav a:hover {background:#555;}
-
-    /* === Sections === */
-    section {padding:60px 20px; max-width:1200px; margin:auto; opacity:0; transform: translateY(30px); transition: all 0.8s ease;}
-    section.active {opacity:1; transform: translateY(0);}
-    section h2 {text-align:center; margin-bottom:40px; font-size:2rem; color:#4a148c;}
-
-    /* === Cards === */
-    .grid {display:grid; grid-template-columns:repeat(auto-fit,minmax(220px,1fr)); gap:25px;}
-    .card {
-        background:#fff; border-radius:12px; padding:20px; box-shadow:0 4px 15px rgba(0,0,0,0.1);
-        transition: transform 0.3s, box-shadow 0.3s;
-    }
-    .card:hover {transform: translateY(-8px); box-shadow:0 8px 25px rgba(0,0,0,0.2);}
-    .card img {width:100%; border-radius:10px; margin-bottom:15px;}
-
-    /* === Footer === */
-    footer {background:#222; color:#fff; text-align:center; padding:20px;}
-
+* {margin:0; padding:0; box-sizing:border-box;}
+body {font-family:'Poppins',sans-serif; background:#121212; color:#fff; scroll-behavior:smooth;}
+a {text-decoration:none; color:inherit;}
+/* === Header full-screen === */
+header {
+  position:relative; height:100vh; display:flex; flex-direction:column; justify-content:center; align-items:center;
+  text-align:center; overflow:hidden; background:linear-gradient(135deg,#6a0dad,#e94560);
+}
+header video {
+  position:absolute; top:0; left:0; width:100%; height:100%; object-fit:cover; z-index:0; opacity:0.4;
+}
+header h1 {
+  font-size:4rem; font-weight:800; z-index:1;
+  background:linear-gradient(90deg,#ffd700,#ff0080,#00ffff);
+  -webkit-background-clip:text; -webkit-text-fill-color:transparent;
+}
+header p {font-size:1.5rem; margin-top:15px; z-index:1;}
+.button {z-index:1; margin-top:20px; padding:10px 20px; background:#ff0080; color:#fff; border:none; border-radius:8px; font-weight:600; cursor:pointer; transition:0.3s;}
+.button:hover {background:#00ffff; color:#000; transform:scale(1.1);}
 </style>
 </head>
 <body>
 
 <header>
-    <h1>Roman Bouchard</h1>
-    <p>Bienvenue dans mon univers 😎</p>
+  <video autoplay muted loop>
+    <source src="https://www.w3schools.com/howto/rain.mp4" type="video/mp4">
+  </video>
+  <h1>Roman Bouchard</h1>
+  <p>Bienvenue dans mon univers immersif 🔥</p>
+  <a href="histoire.html" class="button">Découvrir mon histoire</a>
 </header>
-
-<nav>
-    <a href="#projets">Projets</a>
-    <a href="#documents">Documents</a>
-    <a href="#gallery">Galerie</a>
-    <a href="#contact">Contact</a>
-</nav>
-
-<section id="projets">
-    <h2>Projets</h2>
-    <div class="grid">
-        <div class="card"><h3>Projet 1</h3><p>Description rapide du projet.</p></div>
-        <div class="card"><h3>Projet 2</h3><p>Description rapide du projet.</p></div>
-        <div class="card"><h3>Projet 3</h3><p>Description rapide du projet.</p></div>
-    </div>
-</section>
-
-<section id="documents">
-    <h2>Documents</h2>
-    <div class="grid">
-        <div class="card"><h3>Document 1</h3><p>Lien ou description.</p></div>
-        <div class="card"><h3>Document 2</h3><p>Lien ou description.</p></div>
-    </div>
-</section>
-
-<section id="gallery">
-    <h2>Galerie</h2>
-    <div class="grid">
-        <div class="card"><img src="https://via.placeholder.com/200" alt="Image 1"><p>Légende 1</p></div>
-        <div class="card"><img src="https://via.placeholder.com/200" alt="Image 2"><p>Légende 2</p></div>
-    </div>
-</section>
-
-<section id="contact">
-    <h2>Contact</h2>
-    <p>Email : <a href="mailto:roman@example.com">roman@example.com</a></p>
-    <p>Discord : Roman#1234</p>
-</section>
-
-<footer>
-    &copy; 2025 Roman Bouchard
-</footer>
-
-<script>
-    // Animation scroll fade-in
-    const sections = document.querySelectorAll('section');
-    const observer = new IntersectionObserver((entries) => {
-        entries.forEach(entry => {
-            if(entry.isIntersecting){ entry.target.classList.add('active'); }
-        });
-    }, {threshold:0.2});
-    sections.forEach(section => observer.observe(section));
-</script>
 
 </body>
 </html>
